--- a/index.html
+++ b/index.html
@@ -178,12 +178,16 @@
     <footer>
           <ul id="footerUl" class="row">
             <div class="col-xs-12 col-sm-5 col-md-6">
+              <!-- class="footerDivs"> -->
+              <!-- class="col-xs-12 col-sm-5 col-md-6" -->
             <a href="mailto:thejessicadavies@gmail.com?subject=Jessica's Portfolio&body=Hi Jessica Loved you Portfolio">thejessicadavies@gmail.com</a>
             <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
             <a class="footerLogos" href="https://github.com/jcdaviesauthor/FEWD37/tree/gh-pages"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
             </div>
-            <div class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-6">
-            <div>Web design, content, and code&nbsp;<img id="crImg"alt="Copyright Symbol" src="myimages/home/copyright.png">&nbsp;2016 Jessica Davies.</div>
+            <div class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 liRight">
+              <!-- class="footerDivs liRight" -->
+              <!-- class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 col-lg-offset-1" -->
+            <div >Web design, content, and code&nbsp;<img id="crImg"alt="Copyright Symbol" src="myimages/home/copyright.png">&nbsp;2016 Jessica Davies.</div>
             </div>
           </ul>
     </footer>
