Adding to Tier 5 Introduction

--- a/tier5.html
+++ b/tier5.html
@@ -1,72 +1,123 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jessica Davies UX Design Project 1: Tier 5 </title>
-    <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
-    <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
-    <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
-    <link  rel="stylesheet" href="tier5.css" media="screen" charset="utf-8">
-    <!-- <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'> -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-    <!-- For bootstrap -->
+
+        <!-- BOOTSTRAP-Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Jessica Davies UX Design Project 1: Tier 5 </title>
+    <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
+    <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
+    <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
+    <link  rel="stylesheet" href="tier5.css" media="screen" charset="utf-8">
+
   </head>
   <body>
       <div id='wrapper'>
 
         <div id="header">
           <div id="imgContainer">
-              <header>
-                  <nav id = "navHome">
-                      <ul id="navUl">
-                        <li class="homeBarli" id= "homeHome"><a href="index.html">Home</a></li>
-                        <li class="homeBarli" id= "resumeHome"><a href="emoji-nav-about.html">Resume</a></li>
-                        <li class="homeBarli" id= "aboutHome"><a href="about.html">About</a></li>
-                      </ul>
-                    </nav>
-                  <div class="clearFix"></div>
-              </header>
+            <header>
+          <!-- navbar-default is an add in to change color -->
+          <nav class="navbar navbar-default"  role="navigation">
+              <div class="container">
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                          <span class="sr-only">Toggle navigation</span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                      </buttn>
+                </div>
+              </div>
+
+            <!-- <nav id = "navHome" class="navbar navbar-light bg-faded"> -->
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <!-- <a class="navbar-brand" href="#">Responsive navbar</a> -->
+                <ul id="navUl" class="nav-inline nav navbar-nav">
+                  <!-- <div class="row"> -->
+                  <li class="homeBarli nav-item" id= "homeHome"><a href="index.html">Home</a></li>
+                  <li class="homeBarli nav-item" id= "resumeHome"><a href="emoji-nav-about.html">Resume</a></li>
+                  <li class="homeBarli nav-item" id= "aboutHome"><a href="about.html">About</a></li>
+                  <!-- </div> -->
+                </ul>
+              </div>
+          </nav>
+            <div class="clearFix"></div>
+        </header>
                 <!-- <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/> -->
               <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
             </div>
         </div>
+
       <div id="content">
         <div id="projectTitleBox" class="titleBackground container">
 
           <div class= "container image-swap">
             <img class="projectLogo" class="picone" alt="Tier 5 Octopus Logo" src="myimages/home/tier5-hula-right.png">
             <img class="projectLogo" class="pictwo" alt="Tier 5 Octopus Logo" src="myimages/tier5/tier5-hula-left.png">
-
           </div>
 
-            <h2 id="projectTitle">Tier5 Outbound Sales Lead Generating Platform</h2>
+            <p class="projectTitleSize" id="projectTitle">Tier5 Outbound Sales Lead Generating Platform</p>
         </div>
-        <div id="introBoxes">
-          <div class="introBox">
+        <div class="introBoxes">
+          <div class="introBox introBox1">
             <p class="boxTitle">The Client</p>
-            <p class="boxText heavyText">Tier5, an early stage start-up, engaged us to update their outbound sales-lead generating platform (which contained only a very basic bulk-lead generator) and to give their product a visual facelift. But after doing extenisive research we found they need much more. Our redesign increased their market opportunity by 3x.
+            <p class="boxText heavyText">Tier5, an early stage start-up, engaged us to give their outbound sales-lead generating platform and a visual facelift. But after our extenisive research we found their UX Design and even part of their business model needed a rebuild. Our redesign increased their market opportunity by 3x.
           </p>
           </div>
-            <div class="introBox">
+          <div class="introBox">
             <p class="boxTitle">My Role</p>
-            <p class="boxText heavyText">Over 2 weeks our very close-knit, two-person team, worked collaberatively with every aspect of UX Design process: research, user interviews, user testing, design, sketching, creating low and medium fidelity protoytypes, and presenting our work.
-            </p>
+            <p class="boxText heavyText">Over 2 weeks our very close-knit, two-person team, worked collaberatively with every aspect of UX Design process: research, user interviews, user testing, design, sketching, creating low and medium fidelity protoytypes, and presenting our work. WORD WORD WORD WORD WORD WORD WORD 
+          </p>
           </div>
         </div>
+        <div class="ourProcess">
+            <p class="ourProcessTitle">Our Process</p>
+            <div class="processCircleDiv">
+              <div class="processCircle process stratDesCircle">Strategy</div>
+              <img class="process arrow" alt="arrow" src="myimages/tier5/arrow-orange.png">
+              <div class="processCircle process researchCircle">Research &amp; <br>Discovery</br></div>
+              <img class="process arrow" alt="arrow" src="myimages/tier5/arrow-orange.png">
+              <div class="processCircle process stratDesCircle">Design</div>
+              <img class="process arrow" alt="arrow" src="myimages/tier5/arrow-orange.png">
+              <div class="processCircle process buildCircle">Build &amp; <br>Deliver</br></div>
+            </div>
+        </div>
+
+
+      <!-- THE CONTENT DIV   -->
       </div>
 
       <div id="footer">
         <footer>
-              <ul id="footerUl">
-                <li class="footerLi"><a href="mailto:thejessicadavies@gmail.com?subject=Jessica's Portfolio&body=Hi Jessica Loved your Portfolio!">thejessicadavies@gmail.com</a></li>
-                <li class="footerLi footerLogos"><a href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a></li>
-                <li class="footerLi"><a href="https://github.com/jcdaviesauthor/FEWD37/tree/gh-pages"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a></li>
-                <li class="footerLi liRight">Web design, content, and code&nbsp;<img id="crImg"alt="Copyright Symbol" src="myimages/home/copyright.png">&nbsp;2016 Jessica Davies.</li>
+              <ul id="footerUl" class="row">
+                <div class="col-xs-12 col-sm-5 col-md-6">
+                  <!-- class="footerDivs"> -->
+                  <!-- class="col-xs-12 col-sm-5 col-md-6" -->
+                <a href="mailto:thejessicadavies@gmail.com?subject=Jessica's Portfolio&body=Hi Jessica Loved you Portfolio">thejessicadavies@gmail.com</a>
+                <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
+                <a class="footerLogos" href="https://github.com/jcdaviesauthor/FEWD37/tree/gh-pages"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
+                </div>
+                <div class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 liRight">
+                  <!-- class="footerDivs liRight" -->
+                  <!-- class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 col-lg-offset-1" -->
+                <div >Web design, content, and code&nbsp;<img id="crImg"alt="Copyright Symbol" src="myimages/home/copyright.png">&nbsp;2016 Jessica Davies.</div>
+                </div>
               </ul>
         </footer>
       </div>
 
     </div>
+
+      <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
+
+    <!-- BOOTSTRAP-Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
   </body>
 </html>
