--- a/tier5.html
+++ b/tier5.html
@@ -67,19 +67,19 @@
         <div class="introBoxes">
           <div class="introBox introBox1">
             <p class="boxTitle">The Client</p>
-            <p class="boxText heavyText">Tier5, an early stage start-up, engaged us to give their outbound sales-lead generating platform and a visual facelift. But after our extenisive research we found their UX Design and even part of their business model needed a rebuild. Our redesign increased their market opportunity by 3x.
+            <p class="boxText heavyText">Tier5, an early stage start-up, engaged us to give their outbound sales-lead generating platform a visual facelift. But after our extenisive research we found their UX Design and even part of their business model also needed a rebuild. Our redesign increased their market opportunity by 3x.
           </p>
           </div>
           <div class="introBox">
             <p class="boxTitle">My Role</p>
-            <p class="boxText heavyText">Over 2 weeks our very close-knit, two-person team, worked collaberatively with every aspect of UX Design process: research, user interviews, user testing, design, sketching, creating low and medium fidelity protoytypes, and presenting our work. WORD WORD WORD WORD WORD WORD WORD 
+            <p class="boxText heavyText">Over 2 a two-week period our very close-knit, two-person team worked collaberatively on every aspect of UX Design process: research, hueristic evaluation, compatitive analysis, user interviews, user testing, design, sketching, creating low- and medium-fidelity protoytypes, and presenting our work.
           </p>
           </div>
         </div>
         <div class="ourProcess">
             <p class="ourProcessTitle">Our Process</p>
             <div class="processCircleDiv">
-              <div class="processCircle process stratDesCircle">Strategy</div>
+              <div class="processCircle process stratDesCircle"> Strategy</div>
               <img class="process arrow" alt="arrow" src="myimages/tier5/arrow-orange.png">
               <div class="processCircle process researchCircle">Research &amp; <br>Discovery</br></div>
               <img class="process arrow" alt="arrow" src="myimages/tier5/arrow-orange.png">
@@ -89,6 +89,9 @@
             </div>
         </div>
 
+        <div class="processSectionTitle">Strategy</div>
+        <div class= "ourApproach">Our Strategic Approach</div>
+        
 
       <!-- THE CONTENT DIV   -->
       </div>
