Adding Strategy Section

--- a/tier5.html
+++ b/tier5.html
@@ -59,7 +59,7 @@
 
           <div class= "container image-swap">
             <img class="projectLogo" class="picone" alt="Tier 5 Octopus Logo" src="myimages/home/tier5-hula-right.png">
-            <img class="projectLogo" class="pictwo" alt="Tier 5 Octopus Logo" src="myimages/tier5/tier5-hula-left.png">
+            <img class="projectLogo" class="pictwo" alt="Tier 5 Octopus Logo" src="myimages/tier5/introduction/tier5-hula-left.png">
           </div>
 
             <p class="projectTitleSize" id="projectTitle">Tier5 Outbound Sales Lead Generating Platform</p>
@@ -79,19 +79,139 @@
         <div class="ourProcess">
             <p class="ourProcessTitle">Our Process</p>
             <div class="processCircleDiv">
-              <div class="processCircle process stratDesCircle"> Strategy</div>
-              <img class="process arrow" alt="arrow" src="myimages/tier5/arrow-orange.png">
-              <div class="processCircle process researchCircle">Research &amp; <br>Discovery</br></div>
-              <img class="process arrow" alt="arrow" src="myimages/tier5/arrow-orange.png">
-              <div class="processCircle process stratDesCircle">Design</div>
-              <img class="process arrow" alt="arrow" src="myimages/tier5/arrow-orange.png">
-              <div class="processCircle process buildCircle">Build &amp; <br>Deliver</br></div>
+              <div class="processCircle process stratDesCircle"><a href="#strategySection"><p class="circleText">Strategy</p></a></div>
+              <img class="process arrow" alt="arrow" src="myimages/tier5/introduction/arrow-orange.png">
+              <div class="processCircle process researchCircle"><a href="#researchSection"><p class="circleText">Research &amp; Discovery</p></a></div>
+              <img class="process arrow" alt="arrow" src="myimages/tier5/introduction/arrow-orange.png">
+              <div class="processCircle process stratDesCircle"><a href="#synthesisSection"><p class="circleText">Synthesis</p></a></div>
+              <img class="process arrow" alt="arrow" src="myimages/tier5/introduction/arrow-orange.png">
+              <div class="processCircle process stratDesCircle"><a href="#designSection"><p class="circleText">Design</p></a></div>
+              <img class="process arrow" alt="arrow" src="myimages/tier5/introduction/arrow-orange.png">
+              <div class="processCircle process buildCircle"><a href="buildSection"><p class="circleText">Build &amp;<br> Deliver</br></p></a></div>
             </div>
         </div>
 
-        <div class="processSectionTitle">Strategy</div>
-        <div class= "ourApproach">Our Strategic Approach</div>
-        
+        <div class="processSectionTitle" id="strategySection">Strategy</div>
+
+        <div class= "ourApproachTitle">Our Strategic Approach</div>
+
+        <div class="approach">
+          <div class="approach1 approachSections">
+            <div class="approachCircle"><p class="approachNumber">1</p></div>
+            <div class="approachText">
+              <div class="approachPoints"><p>Always Consider the Business Needs &amp Goals</p></div>
+              <div class="approachSubPoints"><p>Start with the Business first<br>Increase Aquisition and Retention</br></p></div>
+            </div>
+          </div>
+
+          <div class="approach2 approachSections">
+            <div class="approachCircle"><p class="approachNumber">2</p></div>
+            <div class="approachText">
+              <div class="approachPoints"><p>Extensive Competitive Review</p></div>
+              <div class="approachSubPoints"><p>How salespeople think we stack up to the competition?
+              <br>Do we have the right business model?</br></p></div>
+            </div>
+          </div>
+
+          <div class="approach3 approachSections">
+            <div class="approachCircle"><p class="approachNumber">3</p></div>
+            <div class="approachText">
+              <div class="approachPoints"><p>In-depth Understanding of the User</p></div>
+              <div class="approachSubPoints"><p>Understand How sales people seek and use lead information</p></div>
+            </div>
+          </div>
+
+          <div class="approach4 approachSections">
+            <div class="approachCircle"><p class="approachNumber">4</p></div>
+            <div class="approachText">
+              <div class="approachPoints"><p>Redesign UI of Outbound Sales Platform</p></div>
+            </div>
+          </div>
+
+        </div>
+
+      <div class="funnelLogos">
+        <div><p class="funnelTitle">Small start-up can't be all things to all people.</p></div>
+
+        <!-- LOGO ROW 1 -->
+        <div class="logoRow">
+            <img class="competitorLogos cContact" alt="Constant Contact Logo" src="myimages/tier5/strategy/constant-contact-logo.png">
+            <img class="competitorLogos" alt="Mail Chimp Logo" src="myimages/tier5/strategy/mailchimp-logo2.png">
+            <img class="competitorLogos" alt="Infusion Soft Logo" src="myimages/tier5/strategy/infusionsoft-logo.png">
+        </div>
+        <!-- LOGO ROW 2 -->
+        <div class="logoRow">
+            <img class="competitorLogos" alt="Hatchbuck Logo" src="myimages/tier5/strategy/hatchbuck-logo2.png"><img class="competitorLogos" alt="Salesforce Logo" src="myimages/tier5/strategy/salesforce-logo.png"><img class="competitorLogos" alt="HubSpot Logo" src="myimages/tier5/strategy/hubspot-logo.png">
+        </div>
+        <!-- LOGO ROW 3 -->
+        <div class="logoRow">
+          <img class="competitorLogos" alt="LinkedIn Logo" src="myimages/tier5/strategy/linked-logo.png"><img class="competitorLogos lNexus" alt="Lexus Nexus Logo" src="myimages/tier5/strategy/lexisnexis-logo2.png"><img class="competitorLogos" alt="Hoovers Logo" src="myimages/tier5/strategy/hoovers-logo2.png">
+        </div>
+        <!-- LOGO ROW 4 -->
+        <div class="logoRow">
+          <img class="competitorLogos" alt="InsideView Logo" src="myimages/tier5/strategy/insideview-logo.png">
+          <img class="competitorLogos" alt="Data.com Logo" src="myimages/tier5/strategy/datacom-logo.png">
+          <img class="competitorLogos" alt="Avention Logo" src="myimages/tier5/strategy/avention-logo.png">
+        </div>
+        <!-- LOGO ROW 5 -->
+        <div class="logoRow">
+          <img class="competitorLogos" alt="Datanize Logo" src="myimages/tier5/strategy/datanize-logo2.png">
+          <img class="competitorLogos" alt="Zoom Info Logo" src="myimages/tier5/strategy/zoom-info-logo.png">
+        </div>
+
+        <img class="funnel" alt="Grey Funnel" src="myimages/tier5/strategy/funnel.png">
+
+    </div>
+
+      <div><p class="compTableTitle">Focus on competing only with lead/data generators.</p></div>
+
+    <table class="compTable">
+      <tr>
+        <th></th>
+        <th><img class="tierTableLogo competitorTableLogos" alt="Tier 5 Logo" src="myimages/tier5/strategy/tier5-logo-normal.png"></th>
+        <th><img class="zoomTableLogo competitorTableLogos" alt="Zoom Info Logo" src="myimages/tier5/strategy/zoom-star-logo.png"></th>
+        <th><img class="dataTableLogo competitorTableLogos" alt="Datanize Logo" src="myimages/tier5/strategy/datanize-logo4.png"></th>
+        <th><img class="salesableLogo competitorTableLogos" alt="Salesforce Data.com Logo" src="myimages/tier5/strategy/salesforce-logo.png"></th>
+        <th><img class="insideTableLogo competitorTableLogos" alt="InsideView Logo" src="myimages/tier5/strategy/insideview-logo-icon.png"></th>
+
+      <tr class="compTableBar">
+        <td></td>
+        <td>Tier5</td>
+        <td>ZoomInfo</td>
+        <td>Datanize</td>
+        <td>data.com</td>
+        <td>InsideView</td>
+      </tr>
+
+      <tr class="compaTableLines">
+        <td>Strengths</td>
+        <td>Fresh on-demand lead generation<br>Correct contact details</br></td>
+        <td>Easy to use search function</td>
+        <td>Offers info on targets use of competitive technologies</td>
+        <td>Includes Hoover's and Dun &amp BradStreet</td>
+        <td>View co-workers connections</td>
+      </tr>
+
+      <!-- <tr>
+        <td>Tier</td>
+        <td>Fresh on-demand lead generation<br>Correct contact details</br></td>
+        <td>Bare UI<br>No Ability to search for individual contacts</br>No nurturing capabilitities</td>
+        <td>$200-$300/mo</td>
+        <td>$0.35-$0.66</td>
+      </tr>
+      <tr>
+        <td>BLANK</td>
+        <td>Strengths</td>
+        <td>Weaknesses</td>
+        <td>Price/mo</td>
+        <td>Price/lead</td>
+      </tr> -->
+    </table>
+
+    <div class="processSectionTitle" id="researchSection">Research &amp Discovery</div>
+    <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
+    <div class="processSectionTitle" id="designSection">Design</div>
+    <div class="processSectionTitle" id="researchSection">Build &amp Deliver</div>
 
       <!-- THE CONTENT DIV   -->
       </div>
