Add strategy section

--- a/tier5.html
+++ b/tier5.html
@@ -131,7 +131,7 @@
         </div>
 
       <div class="funnelLogos">
-        <div><p class="funnelTitle">Small start-up can't be all things to all people.</p></div>
+        <div><p class="statement">Small start-up can't be all things to all people.</p></div>
 
         <!-- LOGO ROW 1 -->
         <div class="logoRow">
@@ -163,7 +163,7 @@
 
     </div>
 
-      <div><p class="compTableTitle">Focus on competing only with lead/data generators.</p></div>
+      <div><p class="statement statmentOrange">Focus on competing only with lead/data generators.</p></div>
 
     <table class="compTable">
       <tr>
@@ -171,11 +171,11 @@
         <th><img class="tierTableLogo competitorTableLogos" alt="Tier 5 Logo" src="myimages/tier5/strategy/tier5-logo-normal.png"></th>
         <th><img class="zoomTableLogo competitorTableLogos" alt="Zoom Info Logo" src="myimages/tier5/strategy/zoom-star-logo.png"></th>
         <th><img class="dataTableLogo competitorTableLogos" alt="Datanize Logo" src="myimages/tier5/strategy/datanize-logo4.png"></th>
-        <th><img class="salesableLogo competitorTableLogos" alt="Salesforce Data.com Logo" src="myimages/tier5/strategy/salesforce-logo.png"></th>
+        <th><img class="salesableLogo competitorTableLogos" alt="Salesforce Data.com Logo" src="myimages/tier5/strategy/salesforce-logo3.png"></th>
         <th><img class="insideTableLogo competitorTableLogos" alt="InsideView Logo" src="myimages/tier5/strategy/insideview-logo-icon.png"></th>
 
       <tr class="compTableBar">
-        <td></td>
+        <td class="blank"></td>
         <td>Tier5</td>
         <td>ZoomInfo</td>
         <td>Datanize</td>
@@ -183,30 +183,133 @@
         <td>InsideView</td>
       </tr>
 
-      <tr class="compaTableLines">
-        <td>Strengths</td>
-        <td>Fresh on-demand lead generation<br>Correct contact details</br></td>
-        <td>Easy to use search function</td>
-        <td>Offers info on targets use of competitive technologies</td>
-        <td>Includes Hoover's and Dun &amp BradStreet</td>
-        <td>View co-workers connections</td>
+      <!-- STRENGTHS -->
+      <tr class="compTableLines">
+        <td class="leftSideTitles">Strengths</td>
+        <td class="compTableText heavyText">
+          <ul>
+            <li>Fresh on-demand lead generation</li>
+            <li>Correct contact details</li>
+          </ul>
+        </td>
+        <td class="compTableText heavyText">
+          <ul>
+            <li>Easy search function</li>
+            <li>Nurturing news &amp info</li>
+            <li>Alerts</li>
+          </ul>
+        </td>
+        <td class="compTableText heavyText"><ul><li>Offers info on targets use of competitive technologies</li></ul></td>
+        <td class="compTableText heavyText"><ul><li>Includes Hoover's/Dun &amp BradStreet data</li></ul></td>
+        <td class="compTableText heavyText">
+          <ul>
+            <li>View co-workers connections</li>
+            <li>Claims most accurate contact information</li>
+          </ul>
+        </td>
       </tr>
 
-      <!-- <tr>
-        <td>Tier</td>
-        <td>Fresh on-demand lead generation<br>Correct contact details</br></td>
-        <td>Bare UI<br>No Ability to search for individual contacts</br>No nurturing capabilitities</td>
-        <td>$200-$300/mo</td>
-        <td>$0.35-$0.66</td>
+      <!--WEAKNESSED -->
+      <tr class="compTableLines">
+        <td class="leftSideTitles weakLineTop">Weaknesses</td>
+        <td class="compTableText heavyText weakLine weakColor">
+          <ul>
+            <li>Bare UI</li>
+            <li>No Ability to search individual contacts</li>
+            <li>No nurturing capabilities</li>
+          </ul>
+        </td>
+        <td class="compTableText heavyText weakLine weakColor">
+          <ul>
+            <li>Outdated interface</li>
+            <li>Data may be 3+ months old</li>
+          </ul>
+        </td>
+        <td class="compTableText heavyText weakLine weakColor">
+          <ul>
+            <li>Contact info given only one at a time, manual process</li>
+            <li>Charged credits even on invalid emails</li>
+          </ul>
+        </td>
+        <td class="compTableText heavyText weakLine weakColor">
+          <ul>
+            <li>Owned by Salesforce, product not a focus</li>
+            <li>Integration only with Salesforce CRM</li>
+          </ul>
+        </td>
+        <td class="compTableText heavyText weakLine weakColor">
+          <ul>
+            <li>Cheaper plans require 5 license minimum</li>
+            <li>No individual newsfeed</li>
+          </ul>
+        </td>
       </tr>
-      <tr>
-        <td>BLANK</td>
-        <td>Strengths</td>
-        <td>Weaknesses</td>
-        <td>Price/mo</td>
-        <td>Price/lead</td>
-      </tr> -->
+
+      <!--COST per month -->
+      <tr class="compTableLines">
+        <td class="leftSideTitles weakLineTop">Price/mo</td>
+        <td class="compTableText heavyText weakLine">
+          <ul class="cost">
+            <li>$200-300</li>
+          </ul>
+        </td>
+        <td class="compTableText heavyText weakLine">
+          <ul class="cost">
+            <li>$60</li>
+          </ul>
+        </td>
+        <td class="compTableText heavyText weakLine">
+          <ul class="cost">
+            <li>$600</li>
+          </ul>
+        </td>
+        <td class="compTableText heavyText weakLine">
+          <ul class="cost">
+            <li>$125-165</li>
+          </ul>
+        </td>
+        <td class="compTableText heavyText weakLine">
+          <ul class="cost">
+            <li>$99 (5 lic)</li>
+          </ul>
+        </td>
+      </tr>
+
+      <!--COST PER LEAD -->
+      <tr class="compTableLines">
+        <td class="leftSideTitles">Price/lead</td>
+        <td class="compTableText heavyText">
+          <ul class="cost">
+            <li>$0.35-0.66</li>
+          </ul class="cost">
+        </td>
+        <td class="compTableText heavyText">
+          <ul class="cost">
+            <li>$1.25</li>
+          </ul>
+        </td>
+        <td class="compTableText heavyText">
+          <ul class="cost">
+            <li></li>
+          </ul>
+        </td>
+        <td class="compTableText heavyText">
+          <ul class="cost">
+            <li>$0.41-0.50</li>
+          </ul>
+        </td>
+        <td class="compTableText heavyText">
+          <ul class="cost">
+            <li>$0.99</li>
+          </ul>
+        </td>
+      </tr>
     </table>
+
+      <div><p class="statement">Opportunities to improve on the competition.</p></div>
+      <div class="features">
+      <img class="featureCompetition" alt="feature Prioritization Chart" src="myimages/tier5/strategy/feature-competition.png">
+      </div>
 
     <div class="processSectionTitle" id="researchSection">Research &amp Discovery</div>
     <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
